--- a/Backend/nginx/default.conf
+++ b/Backend/nginx/default.conf
@@ -1,18 +1,33 @@
 upstream django {
     server django_app:8000;
 }
+
 server {
     listen 80;
+    server_name localhost;
 
+    # 🔁 Pass all other requests to Django
     location / {
         proxy_pass http://django;
+
+        # ✅ These headers fix the issue of "http://django" appearing in URLs
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # ✅ Serve static files (collected by Django)
     location /static/ {
         alias /app/static/;
+        access_log off;
+        expires 30d;
     }
 
+    # ✅ Serve media files (uploaded files, e.g. images)
     location /media/ {
         alias /app/media/;
+        access_log off;
+        expires 30d;
     }
 }
